<resources>
    <string name="app_name">rebuildedQuizApp</string>
    <string name="question"> </string>
    <string name="Del_button">Del</string>
    <string name="AC_button">AC</string>
    <string name="percent_button">%</string>
    <string name="division_button">/</string>
    <string name="multiply_button">×</string>
    <string name="subtract_button">-</string>
    <string name="add_button">+</string>
    <string name="dot_button">.</string>
    <string name="equal_button">=</string>
    <string name="zero_button">0</string>
    <string name="one_button">1</string>
    <string name="two_button">2</string>
    <string name="three_button">3</string>
    <string name="four_button">4</string>
    <string name="five_button">5</string>
    <string name="six_button">6</string>
    <string name="seven_button">7</string>
    <string name="eight_button">8</string>
    <string name="nine_button">9</string>
    <string name="empty_button">n</string>

</resources>